2013-07-17  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Psymtab.c (Pxlookup_by_name_internal): Assign to result
	if last result was undef, as well as if there was none.

2013-07-15  Nick Alcock  <nick.alcock@oracle.com>

	* Makefunctions (hdr-template): Depend on the DTrace binary.
	(dof-template): Likewise.
	(cc-dependencies): Use .deps for depfiles.
	* GNUmakefile: Likewise.

2013-06-28  Nick Alcock  <nick.alcock@oracle.com>

	* test/demo/act/ustack-size.*: New test, ustack() with a size
	argument.

	* libproc/Pcontrol.c (Pwait_internal): Immediately return if
	stopped at a breakpoint.
	(Puntrace): Reset ptrace_halted before calling Pwait() (which may
	recurse back into Ptrace()).
	(bkpt_handle_start): Set bkpt_halted before calling the handler;
	unset it if the handler returns PS_RUN.
	* libproc/rtld_db.c (rd_ldso_consistent_begin): Do nothing if
	already halted at a breakpoint: if inconsistent, return EDEADLK.
	(rd_ldso_nonzero_lmid_consistent_begin): Likewise.
	(rd_ldso_consistent_end): Note that calls from inside a breakpoint
	handler do nothing.
	(rd_start_trap): Trip a rd_event callback if turned on when the
	start trap is hit.

	* libdtrace/dt_proc.c (dt_proc_rdagent): Split out the dlactivity
	code into..
	(dt_proc_scan): ... this new function.
	(dt_break_drop_main): Call it here.
	(dt_break_interesting): Likewise.

	(dt_proc_resume): Line-wrapping.
	(dt_proc_stop): Format string bug in debugging statement.
	(dt_proc_dpr_lock): Remove some stray debugging.
	(dt_proc_dpr_unlock): Likewise.

	* test/demo/act/ustack.d: Print only two ustack()s.
	* test/demo/act/ustack.r: Adjust.

2013-06-20  Nick Alcock  <nick.alcock@oracle.com>

	Waitfd support.

	* Makeconfig: Test for waitfd().
	* libport/waitfd.c: New syscall wrapper when !HAVE_WAITFD.
	* include/port.h: Prototype it when !HAVE_WAITFD.
	* libport/Build: Adjust.

	Wrappable ptrace() / Pwait() / Ptrace() locking.

	* libproc/wrap.c: New file, implement the default ptrace() and